# recursive_split_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build_linux.sh  build_mac.sh  pyproject.toml
src/: lib.rs  splitter.rs
