[package]
name = "recursive_split_rs"
version = "0.1.0"
edition = "2021"
authors = ["Ziyang Hu"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = { version = "0.13.3", default-features = false, features = ["esaxx_fast", "onig"] }
tiktoken-rs = "0.5.0"
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3", "abi3-py37"] }
