[build-system]
requires = ["maturin"]
build-backend = "maturin"

[project]
name = "recursive_split_rs"
requires-python = ">=3.7"
classifiers = [
    "Topic :: Database",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


